--- a/allo-cinx/src/app/footer/footer.component.html
+++ b/allo-cinx/src/app/footer/footer.component.html
@@ -1,4 +1,18 @@
-<footer class="footer footer-light footer-expand bg-light ps-5">
-  <p>FEUR!!!</p>
+<footer class="footer footer-light footer-expand fixed-bottom px-5 d-flex align-items-center justify-content-around py-2">
+  <div class="d-flex align-middle">
+    <p class="align-middle">© Swappart</p>
+  </div>
+  <div class="d-flex text-center align-middle">
+    <a type="button" class="btn btn-outline-dark" href="https://www.instagram.com/officialrickastley/">
+      <i class="bi bi-instagram"></i>
+    </a>
+    <a type="button" class="btn btn-outline-dark" href="https://www.facebook.com/RickAstley/">
+      <i class="bi bi-facebook"></i>
+    </a>
+    <a type="button" class="btn btn-outline-dark" href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran">
+      <i class="bi bi-youtube
+        "></i>
+    </a>
+  </div>
 </footer>
 
