Add realease date

--- a/allo-cinx/src/app/home/movie/movie.component.html
+++ b/allo-cinx/src/app/home/movie/movie.component.html
@@ -24,5 +24,8 @@
       <h5 class="card-title mb-0">{{movie.title}}</h5>
       <span class="badge bg-primary rounded-pill">{{movie.rate}}/10</span>
     </div>
+    <div class="d-flex justify-content-between align-items-start mb-2">
+      <span class="">{{movie.releaseDate | date:'yyyy'}}</span>
+    </div>
   </div>
 </div>
