--- a/allo-cinx/src/app/movies/movies.component.html
+++ b/allo-cinx/src/app/movies/movies.component.html
@@ -1,54 +1,52 @@
 <!-- movie-list.component.html -->
 <div class="container-fluid mt-4">
-    <div class="d-flex justify-content-between align-items-center mb-3">
-      <h1 class="mb-0">Les films</h1>
-      <div>
-        <button class="btn btn-outline-warning me-2" [routerLink]="['/add-movie']">Nouveau film</button>
-        <button class="btn btn-warning me-2">Retour</button>
-        <button class="btn btn-secondary">Export CSV</button>
-      </div>
-    </div>
-  
-    <div class="table-responsive">
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Titre</th>
-            <th scope="col">Date de sortie</th>
-            <th scope="col">Réalisateur</th>
-            <th scope="col">Note</th>
-            <th scope="col">Synopsis</th>
-            <th scope="col">Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-            @for (movie of movies; track movie.id) {
-                <tr>
-                    <td>{{ movie.id }}</td>
-                    <td>{{ movie.title }}</td>
-                    <td>{{ movie.releaseDate | date:'MM/dd/yyyy' }}</td>
-                    <td>{{ movie.director }}</td>
-                    <td>{{ movie.rate }}</td>
-                    <td>{{ movie.synopsis }}</td>
-                    <td>
-                      <div class="d-flex gap-1">
-                        <button class="btn btn-danger btn-sm" (click)="deleteMovie(movie.id ?? 0)">
-                          <i class="bi bi-trash" ></i>
-                        </button>
-                        <button class="btn btn-warning btn-sm">
-                          <i class="bi bi-pencil" (click)="updateMovie(movie.id ?? 0)"></i>
-                        </button>
-                        <button class="btn btn-success btn-sm">
-                          <i class="bi bi-eye"></i>
-                        </button>
-                      </div>
-                    </td>
-                </tr>
-            }
-
-
-        </tbody>
-      </table>
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <h1 class="mb-0">Les films</h1>
+    <div>
+      <button class="btn btn-outline-warning me-2" [routerLink]="['/add-movie']">Nouveau film</button>
+      <button class="btn btn-warning me-2">Retour</button>
+      <button class="btn btn-secondary">Export CSV</button>
     </div>
   </div>
+
+  <div class="table-responsive">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Titre</th>
+          <th scope="col">Date de sortie</th>
+          <th scope="col">Réalisateur</th>
+          <th scope="col">Note</th>
+          <th scope="col">Synopsis</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        @for (movie of movies; track movie.id) {
+          <tr>
+            <td>{{ movie.id }}</td>
+            <td>{{ movie.title }}</td>
+            <td>{{ movie.releaseDate | date: 'MM/dd/yyyy' }}</td>
+            <td>{{ movie.director }}</td>
+            <td>{{ movie.rate }}</td>
+            <td>{{ movie.synopsis }}</td>
+            <td>
+              <div class="d-flex gap-1">
+                <button class="btn btn-danger btn-sm" (click)="deleteMovie(movie.id ?? 0)">
+                  <i class="bi bi-trash"></i>
+                </button>
+                <button class="btn btn-warning btn-sm" (click)="updateMovie(movie.id ?? 0)">
+                  <i class="bi bi-pencil"></i>
+                </button>
+                <button class="btn btn-success btn-sm">
+                  <i class="bi bi-eye"></i>
+                </button>
+              </div>
+            </td>
+          </tr>
+        }
+      </tbody>
+    </table>
+  </div>
+</div>
