--- a/allo-cinx/src/app/home/movie/movie.component.html
+++ b/allo-cinx/src/app/home/movie/movie.component.html
@@ -1,23 +1,21 @@
 <!-- movie.component.html -->
-<div class="movie-card card shadow h-100" [ngClass]="viewMode === 'grid' ? '' : 'flex-row'">
+<div class="movie-card card shadow h-100">
   <div
     class="movie-image-container"
-    [ngClass]="viewMode === 'grid' ? '' : 'movie-img-container'"
-    [ngStyle]="{ 'max-width': viewMode === 'grid' ? 'none' : '200px' }"
     [routerLink]="['/movies', movie.id]">
     @if (movie.image) {
       <img
         [src]="'http://localhost:8080/movies/' + movie.id + '/image'"
         class="card-img-top"
-        [ngClass]="viewMode === 'grid' ? '' : 'rounded-start rounded-top-0 h-100 object-fit-cover'"
         alt="{{ movie.title }}" />
       <div class="movie-overlay">
-        <button class="btn btn-outline-light btn-sm movie-action-btn"><i class="bi bi-info-circle"></i> Details</button>
+        <button class="btn btn-outline-light btn-sm movie-action-btn">
+          <i class="bi bi-info-circle"></i> Details
+        </button>
       </div>
     } @else {
       <div
-        class="bg-light d-flex align-items-center justify-content-center"
-        [ngClass]="viewMode === 'grid' ? 'pt-5' : 'h-100'"
+        class="bg-light d-flex align-items-center justify-content-center pt-5"
         style="min-height: 200px">
         <i class="bi bi-film fs-1 text-secondary"></i>
       </div>
@@ -30,7 +28,7 @@
       <span class="badge bg-primary rounded-pill">{{ movie.rate }}/10</span>
     </div>
     <div class="d-flex justify-content-between align-items-start mb-2">
-      <span class="">{{ movie.releaseDate | date: 'yyyy' }}</span>
+      <span>{{ movie.releaseDate | date: 'yyyy' }}</span>
     </div>
   </div>
 </div>
