--- a/allo-cinx/src/app/footer/footer.component.html
+++ b/allo-cinx/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer footer-light footer-expand fixed-bottom px-5 d-flex align-items-center justify-content-around py-2">
+<footer class="footer mt-auto d-flex justify-content-around py-2">
   <div class="d-flex align-middle">
     <p class="align-middle">© Swappart</p>
   </div>
