--- a/allo-cinx/src/app/navbar/navbar.component.html
+++ b/allo-cinx/src/app/navbar/navbar.component.html
@@ -1,6 +1,24 @@
 <nav class="navbar navbar-light navbar-expand px-5 d-flex align-items-center">
   <img src="../../assets/logo.png" height="50" class="logo mx-3" />
-  <!--<a class="navbar-brand">{{ title }}</a>-->
-  <h3 class="mb-0"><a class="nav-item nav-link" routerLink="/">Accueil</a></h3>
-  <h3 class="mb-0"><a class="nav-item nav-link mx-3" routerLink="/movies">Gestion de films</a></h3>
+
+  <h3 class="mb-0">
+    <a
+      class="nav-item nav-link"
+      routerLink="/"
+      routerLinkActive="active-tab"
+      [routerLinkActiveOptions]="{ exact: true }"
+    >
+      Accueil
+    </a>
+  </h3>
+
+  <h3 class="mb-0">
+    <a
+      class="nav-item nav-link mx-3"
+      routerLink="/movies"
+      routerLinkActive="active-tab"
+    >
+      Gestion de films
+    </a>
+  </h3>
 </nav>
