--- a/allo-cinx/src/app/home/movie/movie.component.html
+++ b/allo-cinx/src/app/home/movie/movie.component.html
@@ -2,7 +2,7 @@
 <div class="movie-card card shadow h-100">
   <div
     class="movie-image-container"
-    [routerLink]="['/movies', movie.id]">
+    [routerLink]="['/movie', movie.id]">
     @if (movie.image) {
       <img
         [src]="'http://localhost:8080/movies/' + movie.id + '/image'"
@@ -10,7 +10,7 @@
         alt="{{ movie.title }}" />
       <div class="movie-overlay">
         <button class="btn btn-outline-light btn-sm movie-action-btn">
-          <i class="bi bi-info-circle"></i> Details
+          <i class="bi bi-info-circle"></i> Détails
         </button>
       </div>
     } @else {
@@ -25,7 +25,7 @@
   <div class="card-body d-flex flex-column">
     <div class="d-flex justify-content-between align-items-start mb-2">
       <h5 class="card-title mb-0">{{ movie.title }}</h5>
-      <span class="badge bg-primary rounded-pill">{{ movie.rate }}/10</span>
+      <span class="badge bg-primary rounded-pill">{{ movie.rate }}/5</span>
     </div>
     <div class="d-flex justify-content-between align-items-start mb-2">
       <span>{{ movie.releaseDate | date: 'yyyy' }}</span>
