--- a/allo-cinx/src/app/movies/movies.component.html
+++ b/allo-cinx/src/app/movies/movies.component.html
@@ -3,9 +3,8 @@
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="mb-0">Les films</h1>
     <div>
-      <button class="btn btn-outline-warning me-2" [routerLink]="['/add-movie']">Nouveau film</button>
-      <button class="btn btn-warning me-2">Retour</button>
-      <button class="btn btn-secondary">Export CSV</button>
+      <button class="btn btn-outline-warning me-2" routerLink="/add-movie">Nouveau film</button>
+      <button class="btn btn-warning me-2" routerLink="/">Retour</button>
     </div>
   </div>
 
