--- a/allo-cinx/src/app/footer/footer.component.html
+++ b/allo-cinx/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer d-flex flex-direction-row position-absolute justify-content-around top-100 left-100 py-2">
+<footer class="footer d-flex flex-direction-row justify-content-around py-2">
   <div class="d-flex align-middle">
     <p class="align-middle">© Swappart</p>
   </div>
