--- a/allo-cinx/src/app/footer/footer.component.scss
+++ b/allo-cinx/src/app/footer/footer.component.scss
@@ -1,4 +1,7 @@
-footer {
-  background-color: #fecc00;
-  width: 100%
-}
+// footer {
+//   position: fixed;
+//   left: 0;
+//   bottom: 0;
+//   background-color: #fecc00;
+//   width: 100%
+// }
