--- a/allo-cinx/src/app/app.component.html
+++ b/allo-cinx/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-navbar [title]="title"></app-navbar>
+<div class="layout-container">
+  <app-navbar [title]="title"></app-navbar>
 
-<router-outlet/>
+  <div class="main-content">
+    <router-outlet></router-outlet>
+  </div>
 
-<app-footer></app-footer>
+  <app-footer></app-footer>
+</div>
