--- a/allo-cinx/src/app/navbar/navbar.component.html
+++ b/allo-cinx/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light navbar-expand px-5 d-flex align-items-center">
-  <img src="../../assets/logo.png" height="50" class="logo mx-3" />
+  <a routerLink="/"><img src="../../assets/logo.png" height="50" class="logo mx-3" /></a>
 
   <h3 class="mb-0">
     <a
