--- a/allo-cinx/src/app/movies/add-movies/add-movies.component.html
+++ b/allo-cinx/src/app/movies/add-movies/add-movies.component.html
@@ -2,31 +2,111 @@
 <div class="container mt-4">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="mb-0">Nouveau film</h1>
-    <button class="btn btn-secondary" routerLink="/movies">Retour liste</button>
+    <button class="btn btn-secondary" (click)="goBackToList()">Retour liste</button>
   </div>
 
+<form #movieForm="ngForm" (ngSubmit)="addMovie()">
   <div class="mb-3">
     <label for="title" class="form-label">Titre</label>
-    <input type="text" class="form-control" id="title" [(ngModel)]="movie.title" />
-  </div>
+    <input
+      type="text"
+      class="form-control"
+      id="title"
+      name="title"
+      [(ngModel)]="movie.title"
+      pattern="^[A-Z]*$"
+      #titleRef="ngModel"
+      required
+    />
 
-  <div class="mb-3">
-    <label for="director" class="form-label">Réalisateur</label>
-    <input type="text" class="form-control" id="director" [(ngModel)]="movie.director" />
-  </div>
-
-  <div class="mb-3">
-    <label for="releaseDate" class="form-label">Date de Sortie</label>
-    <div class="input-group">
-      <input type="date" class="form-control" id="releaseDate" placeholder="mm/dd/yyyy" [(ngModel)]="movie.releaseDate" />
+    <div class="text-danger mt-1" *ngIf="titleRef.invalid && titleRef.touched">
+      <div *ngIf="titleRef.errors?.['required']">
+        Le titre est requis.
+      </div>
+      <div *ngIf="titleRef.errors?.['pattern']">
+        Le titre doit contenir uniquement des lettres majuscules (A-Z).
+      </div>
     </div>
   </div>
 
-  <div class="mb-4">
-    <label for="synopsis" class="form-label">Synopsis</label>
-    <textarea class="form-control" id="synopsis" rows="5" [(ngModel)]="movie.synopsis"> </textarea>
+
+  <div class="mb-3">
+  <label for="director" class="form-label">Réalisateur</label>
+  <input
+      type="text"
+      class="form-control"
+      id="director"
+      name="director"
+      pattern="^[A-Z][a-z]* [A-Z][a-z]*"
+      #directorRef="ngModel"
+      required
+      [(ngModel)]="movie.director"
+
+      >
+    <div class="text-danger mt-1" *ngIf="directorRef.invalid && directorRef.touched">
+      <div *ngIf="directorRef.errors?.['required']">
+        Le champ réalisateur est requis.
+      </div>
+      <div *ngIf="directorRef.errors?.['pattern']">
+        Le champ réalisateur doit être composé de : Prénom Nom.
+      </div>
+    </div>
   </div>
 
-  <button class="btn btn-warning" (click)="addMovie()">Ajouter</button>
-</div>
+  <div class="mb-3">
+  <label for="releaseDate" class="form-label">Date de Sortie</label>
+    <div class="input-group">
+      <input
+        type="date"
+        class="form-control"
+        id="releaseDate"
+        name="date"
+        placeholder="mm/dd/yyyy"
+        [(ngModel)]="movie.releaseDate"
+        #dateRef="ngModel"
+        required
+        [max]="formattedDate"
+      />
+     
+      <div class="text-danger mt-1" *ngIf="dateRef.invalid && dateRef.touched">
+        <div *ngIf="dateRef.errors?.['required']">
+          La date est requise.
+        </div>
+        <div *ngIf="dateRef.value && dateRef.value > formattedDate">
+          La date ne peut pas être supérieure à aujourd'hui.
+        </div>
+      </div>
+    </div>
+  </div>
 
+
+
+  <div class="mb-4">
+  <label for="synopsis" class="form-label">Synopsis</label>
+  <textarea
+      class="form-control"
+      id="synopsis"
+      rows="5"
+      name="synopsis"
+      [(ngModel)]="movie.synopsis"
+      maxlength="30"
+      #synopsisRef="ngModel"
+      required
+      >
+  </textarea>
+
+    <div class="text-danger mt-1" *ngIf="synopsisRef.invalid && synopsisRef.touched">
+      <div *ngIf="synopsisRef.errors?.['required']">
+        Le synopsis est requis.
+      </div>
+      <div *ngIf="synopsisRef.errors?.['maxlength']">
+        Le synopsis doit faire maximum 30 caractères.
+      </div>
+    </div>
+
+  </div>
+
+<!--    <button  class="btn btn-warning" (click)="addMovie()">Ajouter</button>-->
+  <button class="btn btn-warning" type="submit" [disabled]="titleRef.invalid || directorRef.invalid || synopsisRef.invalid || dateRef.invalid">Ajouter</button>
+</form>
+</div>
