fix: update movie

--- a/allo-cinx/src/app/movies/update-movie/update-movie.component.html
+++ b/allo-cinx/src/app/movies/update-movie/update-movie.component.html
@@ -18,7 +18,7 @@
   <div class="mb-3">
     <label for="releaseDate" class="form-label">Date de Sortie</label>
     <div class="input-group">
-      <input type="date" class="form-control" id="releaseDate" placeholder="mm/dd/yyyy" [(ngModel)]="movie.releaseDate" />
+      <input type="date" class="form-control" id="releaseDate" placeholder="mm/dd/yyyy" [(ngModel)]="releaseDate" />
     </div>
   </div>
 
@@ -29,4 +29,3 @@
 
   <button class="btn btn-warning" (click)="updateMovie()">Mettre a Jour</button>
 </div>
-
