--- a/allo-cinx/src/app/movies/movies.component.html
+++ b/allo-cinx/src/app/movies/movies.component.html
@@ -4,7 +4,7 @@
     <h1 class="mb-0">Les films</h1>
     <div>
       <button class="btn btn-outline-warning me-2" routerLink="/add-movie">Nouveau film</button>
-      <button class="btn btn-warning me-2" routerLink="/">Retour</button>
+      <button class="btn btn-secondary me-2" routerLink="/">← Retour</button>
     </div>
   </div>
 
@@ -35,7 +35,7 @@
                 <button class="btn btn-danger btn-sm" (click)="deleteMovie(movie.id ?? 0)">
                   <i class="bi bi-trash"></i>
                 </button>
-                <button class="btn btn-warning btn-sm" (click)="updateMovie(movie.id ?? 0)">
+                <button class="btn btn-warning btn-sm" routerLink="/update-movie/{{ movie.id }}">
                   <i class="bi bi-pencil"></i>
                 </button>
                 <button class="btn btn-success btn-sm">
