--- a/allo-cinx/src/app/movies/movie-details/movie-details.component.html
+++ b/allo-cinx/src/app/movies/movie-details/movie-details.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3" *ngIf="movie">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="mb-3">{{movie.title}}</h1>
-    <a class="btn btn-secondary" routerLink="/">← Retour à la liste</a>
+    <a class="btn btn-secondary" routerLink="/">← Retour à l'acceuil</a>
   </div>
 
 
