--- a/allo-cinx/src/app/movies/movies.component.html
+++ b/allo-cinx/src/app/movies/movies.component.html
@@ -38,7 +38,7 @@
                 <button class="btn btn-warning btn-sm" routerLink="/update-movie/{{ movie.id }}">
                   <i class="bi bi-pencil"></i>
                 </button>
-                <button class="btn btn-success btn-sm">
+                <button class="btn btn-success btn-sm" routerLink="/movie/{{ movie.id }}">
                   <i class="bi bi-eye"></i>
                 </button>
               </div>
